View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033498 | Open CASCADE | OCCT:Data Exchange | public | 2023-10-03 14:45 | 2024-09-29 22:18 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | Unscheduled | ||||
Summary | 0033498: Data Exchange, Step Export - Meshed pretessellated geometry is skipped on write | ||||
Description | Translation of ComplexTriangulatedSurfaceSet was added to STEP, but resulting PMI shapes are skipped when writing back to STEP. | ||||
Steps To Reproduce | gdt presentation C2 (data after initial import and import of a saved file differs) | ||||
Tags | No tags attached. | ||||
Test case number | none | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2023-10-03 14:45 |
|
New Issue | |
2023-10-03 14:45 |
|
Assigned To | => ika |
2023-10-03 14:46 |
|
Assigned To | ika => |
2023-10-03 14:47 |
|
Description Updated | |
2024-09-24 20:07 | dpasukhi | Assigned To | => dkulikov |
2024-09-25 12:54 | dpasukhi | Project | Internal => Open CASCADE |
2024-09-26 14:27 | dpasukhi | Status | new => assigned |
2024-09-29 22:18 | dpasukhi | Assigned To | dkulikov => bugmaster |
2024-09-29 22:18 | dpasukhi | Status | assigned => verified |
2024-09-29 22:18 | dpasukhi | Resolution | open => fixed |
2024-09-29 22:18 | dpasukhi | Test case number | => none |